--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" type="image/png" href="favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,200,100,500,600,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' type='text/css'
+        href='http://fonts.googleapis.com/css?family=Oswald:400,300,700|Raleway:400,300,200,100,500,600,700|Kaushan+Script'>
     <link rel='stylesheet' href='font-awesome-4.2.0/css/font-awesome.min.css' />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
