--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/btn-styles.css">
 
-    <script src="libs/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="js/libs/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 
 <body ng-app="SPWebApp">
@@ -117,12 +117,12 @@
     </div>
 
     <!-- Libs -->
-    <script src="libs/jquery-1.11.1.min.js"></script>
-    <script src="libs/angular.min.js"></script>
-    <script src="libs/angular-route.min.js"></script>
-    <script src="libs/angular-animate.min.js"></script>
-    <script src="libs/bootstrap.min.js"></script>
-    <script src="libs/wow.min.js"></script>
+    <script src="js/libs/jquery-1.11.1.min.js"></script>
+    <script src="js/libs/angular.min.js"></script>
+    <script src="js/libs/angular-route.min.js"></script>
+    <script src="js/libs/angular-animate.min.js"></script>
+    <script src="js/libs/bootstrap.min.js"></script>
+    <script src="js/libs/wow.min.js"></script>
 
     <!-- App.js -->
     <script src="js/app.js"></script>
