Fixed: Wrong CSS reference

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel='stylesheet' type='text/css'
         href='http://fonts.googleapis.com/css?family=Oswald:400,300,700|Raleway:400,300,200,100,500,600,700|Kaushan+Script'>
-    <link rel='stylesheet' href='font-awesome-4.2.0/css/font-awesome.min.css' />
+    <link rel='stylesheet' href='css/font-awesome.min.css' />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
 
