Loading team data through http service and rendring, Need to load controller dynamic though.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+    <!-- Header -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -41,48 +42,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#!home"><img src="img/misc-img/silverpush.png" class="brand-img" />
+                <a class="navbar-brand" href="#!home">
+                    <img src="img/misc-img/silverpush.png" class="brand-img" />
                 </a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#!home">Home</a>
-                    </li>
+                    <li><a href="#!home">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#!company">Company</a>
-                            </li>
-                            <li><a href="#!team">Team</a>
-                            </li>
-                            <li><a href="#!investors">Investors</a>
-                            </li>
-                            <li><a href="#!contactus">Contact Us</a>
-                            </li>
+                            <li><a href="#!company">Company</a></li>
+                            <li><a href="#!team">Team</a></li>
+                            <li><a href="#!investors">Investors</a></li>
+                            <li><a href="#!contactus">Contact Us</a></li>
                             <li class="divider"></li>
-                            <li><a href="http://blog.silverpush.com/" target="_blank">Blog</a>
-                            </li>
+                            <li><a href="http://blog.silverpush.com/" target="_blank">Blog</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Products <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#!analytics">Analytics</a>
-                            </li>
-                            <li><a href="#!targeting">Targeting</a>
-                            </li>
-                            <li><a href="#!measurement">Measurement</a>
-                            </li>
+                            <li><a href="#!analytics">Analytics</a></li>
+                            <li><a href="#!targeting">Targeting</a></li>
+                            <li><a href="#!measurement">Measurement</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="#!career">Careers</a>
-                    </li>
-                    <li>
-                        <a href="http://console.silverpush.co" target="_blank">Sign In</a>
-                    </li>
+                    <li><a href="#!career">Careers</a></li>
+                    <li><a href="http://console.silverpush.co" target="_blank">Sign In</a></li>
                 </ul>
             </div>
         </div>
@@ -90,6 +78,7 @@
 
     <div ng-view class="view-slide-in"></div>
 
+    <!-- Footer -->
     <div class="container-fluid">
         <div class="row bg-black">
             <div class="text-center" id="social-icons">
