Fixed top padding in footer

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div ng-view class="view-slide-in"></div>
 
     <!-- Footer -->
-    <div class="container-fluid">
+    <div class="footer container-fluid">
         <div class="row bg-black">
             <div class="text-center" id="social-icons">
                 <ul class="list-inline">
