--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel='stylesheet' type='text/css'
-        href='http://fonts.googleapis.com/css?family=Oswald:400,300,700|Raleway:400,300,200,100,500,600,700|Kaushan+Script'>
+        href='http://fonts.googleapis.com/css?family=Economica:400,700|Ubuntu:400,700|Kaushan+Script'>
     <link rel='stylesheet' href='css/font-awesome.min.css' />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -48,7 +48,7 @@
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right ubuntu">
                     <li><a href="#!home">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
@@ -79,24 +79,24 @@
     <div ng-view class="view-slide-in"></div>
 
     <!-- Footer -->
-    <div class="footer container-fluid">
+    <div class="container-fluid footer">
         <div class="row bg-black">
             <div class="text-center" id="social-icons">
                 <ul class="list-inline">
 
-                    <li><a href="#!contactus"><span class="fa fa-phone"></span></a>
+                    <li><a href="#!contactus"><span class="fa fa-phone-square"></span></a>
                     </li>
-                    <li><a href="https://www.facebook.com/silverpush" target="_blank"><span class="fa fa-facebook "></span></a>
+                    <li><a href="https://www.facebook.com/silverpush" target="_blank"><span class="fa fa-facebook-square"></span></a>
                     </li>
-                    <li><a href="https://twitter.com/silverpush" target="_blank"><span class="fa fa-twitter"></span></a>
+                    <li><a href="https://twitter.com/silverpush" target="_blank"><span class="fa fa-twitter-square"></span></a>
                     </li>
                     <li>
                         <a href="http://www.linkedin.com/company/2808449" target="_blank">
-                            <span class="fa fa-linkedin"></span>
+                            <span class="fa fa-linkedin-square"></span>
                         </a>
                     </li>
-                    <li style="font-size:0.8em;">
-                        &copy; SilverPush 2012-
+                    <li>
+                        <span class="fa fa-copyright"></span> SilverPush 2012-
                         <script type="text/javascript">
                         document.write(new Date().getFullYear());
                         </script>
@@ -112,41 +112,17 @@
     <script src="app/libs/angular-route.min.js"></script>
     <script src="app/libs/angular-animate.min.js"></script>
     <script src="app/libs/bootstrap.min.js"></script>
-    <script src="app/libs/wow.min.js"></script>
 
     <!-- App.js -->
     <script src="app/app.js"></script>
     <script src="app/controllers.js"></script>
     <script>
-    new WOW().init();
-
     $(document).on('click', '.navbar-collapse.in', function(e) {
         if ($(e.target).is('a')) {
             $(this).collapse('hide');
         }
     });
     </script>
-
-    <!-- In-Page Script -->
-
-    <!-- Google Analytic Code-->
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] ||
-            function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-48003671-1', 'silverpush.co');
-    ga('send', 'pageview');
-    </script>
-
 </body>
 
 </html>
