--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -95,7 +94,7 @@
                             <span class="fa fa-linkedin-square"></span>
                         </a>
                     </li>
-                    <li>
+                    <li class="ubuntu copyright">
                         <span class="fa fa-copyright"></span> SilverPush 2012-
                         <script type="text/javascript">
                         document.write(new Date().getFullYear());
@@ -117,10 +116,20 @@
     <script src="app/app.js"></script>
     <script src="app/controllers.js"></script>
     <script>
-    $(document).on('click', '.navbar-collapse.in', function(e) {
-        if ($(e.target).is('a')) {
-            $(this).collapse('hide');
-        }
+
+
+    $(document).ready(function () {
+
+        $(document).on('click', '.navbar-collapse.in', function(e) {
+            if ($(e.target).is('a')) {
+                $(this).collapse('hide');
+                $(".navbar-toggle").removeClass("active");
+            }
+        });
+
+        $(".navbar-toggle").on("click", function () {
+            $(this).toggleClass("active");
+        });
     });
     </script>
 </body>
