Adding classname as font is not good idea

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right ubuntu">
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#!home">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About <span class="caret"></span></a>
@@ -94,7 +94,7 @@
                             <span class="fa fa-linkedin-square"></span>
                         </a>
                     </li>
-                    <li class="ubuntu copyright">
+                    <li class="copyright">
                         <span class="fa fa-copyright"></span> SilverPush 2012-
                         <script type="text/javascript">
                         document.write(new Date().getFullYear());
