--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel='stylesheet' type='text/css'
-        href='http://fonts.googleapis.com/css?family=Economica:400,700|Ubuntu:400|Kaushan+Script'>
+        href='http://fonts.googleapis.com/css?family=Economica:400,700|Titillium+Web|Courgette'>
     <link rel='stylesheet' href='css/font-awesome.min.css' />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -33,7 +33,7 @@
         <![endif]-->
 
     <!-- Header -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top secondary-font" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
